<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/history_tv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:fontFamily="@font/av_heavy"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingTop="106dp"
        android:paddingEnd="36dp"
        android:textAlignment="textEnd"
        android:textColor="@color/philippine_gray"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="123+456+789" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:fontFamily="@font/av_heavy"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingTop="35dp"
        android:paddingEnd="36dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black_olive"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_tv"
        tools:text="1,368" />

    <!-- First Row -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/seven_btn"
        app:layout_constraintEnd_toStartOf="@+id/sign_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/eight_btn"
        app:layout_constraintEnd_toStartOf="@+id/percent_btn"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percent_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/percent"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/nine_btn"
        app:layout_constraintEnd_toStartOf="@+id/divide_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divide_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastel_blue"
        android:fontFamily="@font/av_heavy"
        android:text="@string/divide"
        android:textColor="@color/black_olive"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/multiply_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <!-- Second Row -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/four_btn"
        app:layout_constraintEnd_toStartOf="@+id/eight_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/eight"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/five_btn"
        app:layout_constraintEnd_toStartOf="@+id/nine_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/six_btn"
        app:layout_constraintEnd_toStartOf="@+id/multiply_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight_btn"
        app:layout_constraintTop_toBottomOf="@+id/percent_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/multiply_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastel_blue"
        android:fontFamily="@font/av_heavy"
        android:text="@string/multiply"
        android:textColor="@color/black_olive"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/minus_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine_btn"
        app:layout_constraintTop_toBottomOf="@+id/divide_btn" />

    <!-- Third Row -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/one_btn"
        app:layout_constraintEnd_toStartOf="@+id/five_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/two_btn"
        app:layout_constraintEnd_toStartOf="@+id/six_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four_btn"
        app:layout_constraintTop_toBottomOf="@+id/eight_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/three_btn"
        app:layout_constraintEnd_toStartOf="@+id/minus_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five_btn"
        app:layout_constraintTop_toBottomOf="@+id/nine_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastel_blue"
        android:fontFamily="@font/av_heavy"
        android:text="@string/minus"
        android:textColor="@color/black_olive"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/plus_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six_btn"
        app:layout_constraintTop_toBottomOf="@+id/multiply_btn" />

    <!-- Fourth Row -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/zero_btn"
        app:layout_constraintEnd_toStartOf="@+id/two_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/dot_btn"
        app:layout_constraintEnd_toStartOf="@+id/three_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one_btn"
        app:layout_constraintTop_toBottomOf="@+id/five_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
        app:layout_constraintEnd_toStartOf="@+id/plus_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two_btn"
        app:layout_constraintTop_toBottomOf="@+id/six_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastel_blue"
        android:fontFamily="@font/av_heavy"
        android:text="@string/plus"
        android:textColor="@color/black_olive"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/equal_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three_btn"
        app:layout_constraintTop_toBottomOf="@+id/minus_btn" />

    <!-- Fifth Row -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dot_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/dot"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero_btn"
        app:layout_constraintTop_toBottomOf="@+id/two_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_olive"
        android:fontFamily="@font/av_heavy"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot_btn"
        app:layout_constraintTop_toBottomOf="@+id/three_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equal_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pastel_blue"
        android:fontFamily="@font/av_heavy"
        android:text="@string/equal"
        android:textColor="@color/black_olive"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/plus_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>